plugins {
  id 'idea'
  id "org.jetbrains.gradle.plugin.idea-ext" version "1.3"
}

subprojects {

  apply plugin: 'java'

  java.toolchain.languageVersion = JavaLanguageVersion.of(25)
  java.withSourcesJar()
  java.withJavadocJar()

  repositories {
    mavenCentral()
    mavenLocal()
    maven {
      url "https://www.cursemaven.com"
      content {
        includeGroup "curse.maven"
      }
    }
    maven {
      name = "Modrinth"
      url = "https://api.modrinth.com/maven"
      content {
        includeGroup "maven.modrinth"
      }
    }
  }

  dependencies {
    configurations.configureEach {
      resolutionStrategy.force 'org.ow2.asm:asm:9.8'
      resolutionStrategy.force 'org.ow2.asm:asm-commons:9.8'
    }
  }

  configurations.named('testRuntimeOnly') {
    setExtendsFrom([])
  }

  tasks.register('wrapper', Wrapper) {
    gradleVersion = '9.7.1'
    distributionType = Wrapper.DistributionType.BIN
  }

  tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.incremental = true
    options.fork = true
    options.forkOptions.memoryMaximumSize = '2g'
  }

  tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
  }

  tasks.withType(Javadoc).configureEach {
    enabled = false
  }

  tasks.register("prepareKotlinBuildScriptModel") {}

  idea {
    module {
      downloadSources = true
      downloadJavadoc = true
    }
  }

  // Disable Development helper mods like JEI or Xaero's Minimap for game test run.
  ext.isGameTestRun = gradle.startParameter.taskNames.any {
    def taskName = it.toLowerCase()
    return taskName.contains('gametest') || taskName.contains('fullcheck')
  }

  // Local Easy Model Entities common artifact (compile); null falls back to CurseForge.
  ext.findLocalEasyModelEntities = { ->
    def version = project.findProperty('easy_model_entities_version')
    if (version == null) {
      return null
    }
    def mcVersion = project.minecraft_version
    if (project.hasProperty('easy_model_entities_local_jar')) {
      def localJar = file(project.easy_model_entities_local_jar)
      if (localJar.exists()) {
        return localJar
      }
    }
    def mavenLocalJar =
        file("${System.getProperty('user.home')}/.m2/repository/de/markusbordihn/easymodelentities/"
            + "easy_model_entities-common-${mcVersion}/${version}/"
            + "easy_model_entities-common-${mcVersion}-${version}.jar")
    return mavenLocalJar.exists() ? mavenLocalJar : null
  }

  // Local Easy Model Entities loader artifact (runtime); null falls back to CurseForge.
  ext.findLocalEasyModelEntitiesLoader = { String loader ->
    def version = project.findProperty('easy_model_entities_version')
    if (version == null) {
      return null
    }
    def mcVersion = project.minecraft_version
    def jar =
        file("${System.getProperty('user.home')}/.m2/repository/de/markusbordihn/easymodelentities/"
            + "easy_model_entities-${loader}-${mcVersion}/${version}/"
            + "easy_model_entities-${loader}-${mcVersion}-${version}.jar")
    return jar.exists()
        ? "de.markusbordihn.easymodelentities:easy_model_entities-${loader}-${mcVersion}:${version}"
        : null
  }

  configurations.configureEach {
    resolutionStrategy {
      cacheChangingModulesFor 5, 'minutes'
      cacheDynamicVersionsFor 60, 'minutes'
    }
  }
}

tasks.register('allGameTests') {
  group = 'verification'
  description = 'Runs Fabric, Forge and NeoForge game tests.'
  dependsOn ':Fabric:runGameTest', ':Forge:runGameTestServer', ':NeoForge:runGameTestServer'
}

tasks.register('fullCheck') {
  group = 'verification'
  description = 'Runs check and game tests for all platforms (Common, Fabric, Forge, NeoForge).'
  dependsOn ':Common:check', ':Fabric:check', ':Forge:check', ':NeoForge:check', 'allGameTests'
}
